--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Abhay Pathak | Portfolio</title>
-    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/758572508911501315/1128794635565805729/ap-letter-logo-design_579179-1040-removebg-preview.png" type="jpeg/png">
+    <link rel="shortcut icon"
+        href="https://cdn.discordapp.com/attachments/758572508911501315/1128794635565805729/ap-letter-logo-design_579179-1040-removebg-preview.png"
+        type="jpeg/png">
 </head>
 
 <body>
@@ -56,10 +58,7 @@
             </div>
     </section>
 
-
-
     <!-- About Section -->
-
 
     <div id="about-title">
         <div class="forLine">
@@ -227,16 +226,15 @@
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/TravTok.png" alt=""></figure>
                 <h1>TravTok</h1>
-                <h2>A website inspired by the Dribble Template, serving as a traveler's guide for exploring "Things to
-                    do in Seoul."</h2>
+                <h2>A website inspired by the Dribbble template, serving as a traveler's guide for exploring Seoul based
+                    on the theme 'Things to do in Seoul.</h2>
                 <h1>Tech-Stacks</h1>
                 <h2>Html | Css | Javascript</h2>
                 <div class="deployed-links">
                     <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link"
                         title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><i
-                            class="fa-duotone fa-eye"
-                            style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
+                    <a href="https://travtok.netlify.app/" title="Netlify" class="project-deployed-link"><i
+                            class="fa-solid fa-eye"></i></a>
                 </div>
             </div>
             <div class="project-card">
@@ -250,13 +248,14 @@
                     <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><i
                             class="fa-brands fa-github" style="color: #6abde7;"></i></a>
                     <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><i
-                            class="fa-duotone fa-eye"
-                            style="--fa-primary-color: #dc3c50; --fa-secondary-color: #000000;"></i></a>
+                            class="fa-solid fa-eye"></i></a>
                 </div>
             </div>
         </section>
     </div>
+
     <br>
+
     <div>
         <div class="Project">
             <h2 class="p-title">Enterprise Application </h2>
