--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Abhay Pathak | Portfolio</title>
     <link rel="shortcut icon"
-        href="https://cdn.discordapp.com/attachments/758572508911501315/1128794635565805729/ap-letter-logo-design_579179-1040-removebg-preview.png"
+        href="https://cdn.discordapp.com/attachments/758572508911501315/1129308033604923442/ap-letter-logo-design_579179-1040-removebg-preview-removebg-preview.png"
         type="jpeg/png">
 </head>
 
@@ -16,7 +16,7 @@
     <nav id="nav-menu">
         <ul>
             <li class="logo"><img
-                    src="https://cdn.discordapp.com/attachments/758572508911501315/1128794635565805729/ap-letter-logo-design_579179-1040-removebg-preview.png"
+                    src="https://cdn.discordapp.com/attachments/758572508911501315/1129308033604923442/ap-letter-logo-design_579179-1040-removebg-preview-removebg-preview.png"
                     alt=""></li>
         </ul>
         <ul>
@@ -39,8 +39,7 @@
                 <div class="home-text">
                     <div>
                         <p style="font-size: 26px;line-height: 1px;font-weight: 600;">Hi, I'm</p>
-                        <p id="user-detail-name">ABHAY PATHAK
-                        </p>
+                        <p id="user-detail-name">ABHAY PATHAK</p>
                         <p id="user-detail-intro"></p>
                         <ul id="socials">
                             <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
