--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </ul>
                     </div>
                     <div id="mypic">
-                        <img src="images/Profile_Pic.jpg" alt="" class="home-img">
+                        <img src="images/pp.png" alt="" class="home-img">
                     </div>
                 </div>
             </div>
