--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <h1>OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
-                    profiles</h2>
+                    profiles.</h2>
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
@@ -276,7 +276,7 @@
                 <h1>OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
-                    profiles</h2>
+                    profiles.</h2>
                 <h1>Tech-Stacks</h1>
                 <h2>JAVA | Spring Tool Suite</h2>
                 <div class="deployed-links">
