--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <ul id="socials">
                             <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
                             </li>
-                            <li><a href=""><i class="fa-brands fa-linkedin fa-bounce" style="color: #ff7300;"></i></a>
+                            <li><a href=""><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a>
                             </li>
-                            <li><a href=""><i class="fa-brands fa-github fa-bounce" style="color: #ff7300;"></i></a>
+                            <li><a href=""><i class="fa-brands fa-github" style="color: #ff7300;"></i></a>
                             </li>
                         </ul>
                     </div>
