--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
 
                 <div class="skills-card" style="--i:5;">
                     <div>
+                        <img class="skills-card-img" src="https://ak016.github.io/images/maven-logo.png" alt="">
+                    </div>
+                    <div class="skills-card-name">
+                        Maven
+                    </div>
+                </div>
+
+                <div class="skills-card" style="--i:6;">
+                    <div>
                         <img class="skills-card-img" src="Skills_Logo/Git_logo.png" alt="">
                     </div>
                     <div class="skills-card-name">
@@ -146,7 +155,7 @@
                     </div>
                 </div>
 
-                <div class="skills-card" style="--i:6;">
+                <div class="skills-card" style="--i:7;">
                     <div>
                         <img class="skills-card-img" src="Skills_Logo/html_logo.png" alt="">
                     </div>
@@ -156,21 +165,12 @@
 
                 </div>
 
-                <div class="skills-card" style="--i:7;">
+                <div class="skills-card" style="--i:8;">
                     <div>
                         <img class="skills-card-img" src="Skills_Logo/css_logo.webp" alt="">
                     </div>
                     <div class="skills-card-name">
                         CSS
-                    </div>
-                </div>
-
-                <div class="skills-card" style="--i:8;">
-                    <div>
-                        <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
-                    </div>
-                    <div class="skills-card-name">
-                        JavaScript
                     </div>
                 </div>
 
@@ -182,6 +182,8 @@
                         JavaScript
                     </div>
                 </div>
+
+               
 
                 <div class="skills-card" style="--i:10;">
                     <div>
