--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
     <section id="contact">
         <div class="container">
             <div class="section-heading">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">Get in touch</h2>
             </div>
             <ul class="contact-list">
-                <li><a href="https://github.com/abhipathak1" id="contact-github">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin">LinkedIn</a>
+                <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope" style="color: #050505;"></i> abhipathak3537@gmail.com</a></li>
+                <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github" style="color: #000000;"></i> GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i class="fa-brands fa-linkedin" style="color: #000000;"></i> LinkedIn</a>
                 </li>
-                <li><a href="#" id="contact-phone">Phone: +91 8810594001</a></li>
-                <li><a href="mailto:abhipathak3537.com" id="contact-email">Email</a></li>
+                <li><a href="#" id="contact-phone"><i class="fa-solid fa-phone" style="color: #000000;"></i> +91 8810594001</a></li>
             </ul>
         </div>
     </section>
