--- a/index.html
+++ b/index.html
@@ -69,21 +69,29 @@
 
     <section id="about" class="about section">
         <div class="container">
-            <div class="about-content">
-                <p class="about-description">
-                    As a Java backend developer, my expertise lies in building full-stack projects utilizing Java,
-                    Spring Boot, Hibernate, and restful APIs. With a strong focus on problem-solving, attention to
-                    detail, and a proactive approach, I contribute effectively as a team player. I am dedicated to
-                    delivering high-quality software solutions and place great emphasis on effective communication and
-                    meeting deadlines.</p>
+            <div class="about-content"> 
+                <div>
+                    <p class="about-description">
+                        As a Java backend developer, my expertise lies in building full-stack projects utilizing Java,
+                        Spring Boot, Hibernate, and restful APIs. With a strong focus on problem-solving, attention to
+                        detail, and a proactive approach, I contribute effectively as a team player. I am dedicated to
+                        delivering high-quality software solutions and place great emphasis on effective communication
+                        and
+                        meeting deadlines.</p>
+
+                        <div class="resume-buttons">
+                            <a class="resume-button" id="resume-button-2"
+                                href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know More
+                                About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
+                            </a>
+                        </div>
+                </div>
+                <div>
+                    <img src="/images/Aboutimg.jpg" alt="">
+                </div>
             </div>
 
-            <div class="resume-buttons">
-                <a class="resume-button" id="resume-button-2"
-                    href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know More
-                    About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
-                </a>
-            </div>
+            
         </div>
     </section>
 
@@ -183,7 +191,7 @@
                     </div>
                 </div>
 
-               
+
 
                 <div class="skills-card" style="--i:10;">
                     <div>
@@ -339,11 +347,15 @@
                 <h2 class="section-title">Get in touch</h2>
             </div>
             <ul class="contact-list">
-                <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope" style="color: #050505;"></i> abhipathak3537@gmail.com</a></li>
-                <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github" style="color: #000000;"></i> GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i class="fa-brands fa-linkedin" style="color: #000000;"></i> LinkedIn</a>
+                <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"
+                            style="color: #050505;"></i> abhipathak3537@gmail.com</a></li>
+                <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github"
+                            style="color: #000000;"></i> GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i
+                            class="fa-brands fa-linkedin" style="color: #000000;"></i> LinkedIn</a>
                 </li>
-                <li><a href="#" id="contact-phone"><i class="fa-solid fa-phone" style="color: #000000;"></i> +91 8810594001</a></li>
+                <li><a href="#" id="contact-phone"><i class="fa-solid fa-phone" style="color: #000000;"></i> +91
+                        8810594001</a></li>
             </ul>
         </div>
     </section>
