--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="shortcut icon"
         href="https://cdn.discordapp.com/attachments/758572508911501315/1129308033604923442/ap-letter-logo-design_579179-1040-removebg-preview-removebg-preview.png"
         type="jpeg/png">
+
+    <!-- first-Font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- font-family: 'Dancing Script', cursive; -->
+    
+
 </head>
 
 <body>
@@ -69,7 +78,7 @@
 
     <section id="about" class="about section">
         <div class="container">
-            <div class="about-content"> 
+            <div class="about-content">
                 <div>
                     <p class="about-description">
                         As a Java backend developer, my expertise lies in building full-stack projects utilizing Java,
@@ -79,19 +88,20 @@
                         and
                         meeting deadlines.</p>
 
-                        <div class="resume-buttons">
-                            <a class="resume-button" id="resume-button-2"
-                                href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know More
-                                About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
-                            </a>
-                        </div>
+                    <div class="resume-buttons">
+                        <a class="resume-button" id="resume-button-2"
+                            href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know
+                            More
+                            About Me &nbsp <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                    </div>
                 </div>
                 <div>
                     <img src="/images/Aboutimg.jpg" alt="">
                 </div>
             </div>
 
-            
+
         </div>
     </section>
 
@@ -308,7 +318,7 @@
     <div>
         <div id="git-title">
             <div class="forLine">
-                <h2 class="section-title">Github Statistics</h2>
+                <h2 class="section-title">Github Stats</h2>
                 <hr class="first-line">
                 <hr class="git-line">
             </div>
@@ -317,7 +327,7 @@
             <div>
                 <a class="react-activity-calendar" href="https://git.io/streak-stats">
                     <img id="github-streak-stats"
-                        src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&border_radius=5"
+                        src="https://github-readme-streak-stats.herokuapp.com/?user=abhipathak1&theme=dark&border_radius=5"
                         alt="GitHub Streak Stats" />
                 </a>
             </div>
