--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- font-family: 'Dancing Script', cursive; -->
-    
+
 
 </head>
 
@@ -69,11 +69,7 @@
     <!-- About Section -->
 
     <div id="about-title">
-        <div class="forLine">
-            <h2 class="section-title">About</h2>
-            <hr class="about-line">
-            <hr class="first-line">
-        </div>
+            <h2 class="right-title">About</h2>
     </div>
 
     <section id="about" class="about section">
@@ -110,12 +106,9 @@
     <!-- SkillSection -->
     <div>
         <div id="Sills-title">
-            <div class="forLine">
-                <h2 class="section-title">Skills</h2>
-                <hr class="first-line">
-                <hr class="Sills-line">
-            </div>
-        </div>
+                <h2 class="left-title">Skills</h2>
+        </div> 
+        
         <section id="skills">
             <div class="box22">
                 <div class="skills-card" style="--i:1;">
@@ -221,11 +214,7 @@
 
     <section id="pp">
         <div id="Project-tittle">
-            <div class="forLine">
-                <h2 class="section-title">Projects</h2>
-                <hr class="Project-line">
-                <hr class="first-line">
-            </div>
+                <h2 class="right-title">Projects</h2>
         </div>
     </section>
 
@@ -317,11 +306,7 @@
 
     <div>
         <div id="git-title">
-            <div class="forLine">
-                <h2 class="section-title">Github Stats</h2>
-                <hr class="first-line">
-                <hr class="git-line">
-            </div>
+                <h2 class="left-title">Github Stats</h2>
         </div>
         <div class="github">
             <div>
@@ -354,7 +339,7 @@
     <section id="contact">
         <div class="container">
             <div class="section-heading">
-                <h2 class="section-title">Get in touch</h2>
+                <h2 class="">Get in touch</h2>
             </div>
             <ul class="contact-list">
                 <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"
@@ -370,6 +355,7 @@
         </div>
     </section>
 
+   
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/30a5a51570.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
