--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- About Section -->
 
     <div id="about-title">
-            <h2 class="right-title">About</h2>
+        <h2 class="right-title">About</h2>
     </div>
 
     <section id="about" class="about section">
@@ -106,9 +106,9 @@
     <!-- SkillSection -->
     <div>
         <div id="Sills-title">
-                <h2 class="left-title">Skills</h2>
-        </div> 
-        
+            <h2 class="left-title">Skills</h2>
+        </div>
+
         <section id="skills">
             <div class="box22">
                 <div class="skills-card" style="--i:1;">
@@ -214,7 +214,7 @@
 
     <section id="pp">
         <div id="Project-tittle">
-                <h2 class="right-title">Projects</h2>
+            <h2 class="right-title">Projects</h2>
         </div>
     </section>
 
@@ -227,37 +227,56 @@
         <section class="Project">
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/TravTok.png" alt=""></figure>
-                <h1>TravTok</h1>
+                <h1 class="project-title">TravTok</h1>
                 <h2>A website inspired by the Dribbble template, serving as a traveler's guide for exploring Seoul based
                     on the theme 'Things to do in Seoul.</h2>
-                <h1>Tech-Stacks</h1>
-                <h2>Html | Css | Javascript</h2>
-                <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/sharp-lumber-1926" class="project-github-link"
-                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://travtok.netlify.app/" title="Netlify" class="project-deployed-link"><i
-                            class="fa-solid fa-eye"></i></a>
+               
+                <div class="tech">
+                    <div>
+                        <h1>Tech Stack</h1>
+                        <h1><i class="fa-brands fa-html5 html-icon" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt css-icon" title="CSS"></i>
+                            <i class="fa-brands fa-square-js js-icon" title="JavaScript"></i>
+                        </h1>
+                    </div>
+
+                    <div class="deployed-links">
+                        <h1>DEPLOYED</h1>
+                        <a href="https://github.com/abhipathak1/TravTok" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
+                                alt=""></a>
+                        <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><img
+                                src="Skills_Logo/Netlify.png" alt=""></a>
+                    </div>
                 </div>
+
             </div>
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/Hoshiyaarr.png" alt=""></figure>
-                <h1>Hoshiyaar</h1>
+                <h1 class="project-title">Hoshiyaar</h1>
                 <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances,
                     and gadgets.</h2>
-                <h1>Tech-Stacks</h1>
-                <h2>Html | Css | Javascript</h2>
-                <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><i
-                            class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><i
-                            class="fa-solid fa-eye"></i></a>
+
+                <div class="tech">
+                    <div>
+                        <h1>Tech Stack</h1>
+                        <h1><i class="fa-brands fa-html5 html-icon" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt css-icon" title="CSS"></i>
+                            <i class="fa-brands fa-square-js js-icon" title="JavaScript"></i>
+                        </h1>
+                    </div>
+                    <div class="deployed-links">
+                        <h1>DEPLOYED</h1>
+                        <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
+                                alt=""></a>
+                        <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><img
+                                src="Skills_Logo/Netlify.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
 
     <br>
-
     <div>
         <div class="Project">
             <h2 class="p-title">Enterprise Application </h2>
@@ -266,35 +285,56 @@
         <section class="Project">
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/OnAnOn.jpg" alt=""></figure>
-                <h1>OnAnOn</h1>
+                <h1 class="project-title">OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
                     profiles.</h2>
-                <h1>Tech-Stacks</h1>
-                <h2>JAVA | Spring Tool Suite</h2>
-                <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"
-                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                        class="project-deployed-link" title="Presentation"><i class="fa-solid fa-circle-play"
-                            style="color: black;"></i></a>
+                <div class="tech">
+                    <div>
+                        <h1>TECH STACK</h1>
+                        <div>
+                            <img src="Skills_Logo/java.png" alt="" title="java">
+                            <img src="Skills_Logo/File.png" alt="" title="File">
+                        </div>
+                    </div>
+                    <div class="deployed-links">
+                        <h1>DEPLOYED</h1>
+                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
+                                alt=""></a>
+                        <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
+                            class="project-deployed-link" title="Presentation"><img
+                                src="Skills_Logo/Presentation.png" alt=""></a>
+                    </div>
                 </div>
             </div>
+
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/OnAnOn.jpg" alt=""></figure>
-                <h1>OnAnOn</h1>
+                <h1 class="project-title">OnAnOn</h1>
                 <h2>OnAnOn is a simple ride-hailing application built using Java. It
                     allows passengers to book rides and drivers to manage their
                     profiles.</h2>
-                <h1>Tech-Stacks</h1>
-                <h2>JAVA | Spring Tool Suite</h2>
-                <div class="deployed-links">
-                    <a href="https://github.com/abhipathak1/guarded-boat-4126" class="project-github-link"
-                        title="Github"><i class="fa-brands fa-github" style="color: #6abde7;"></i></a>
-                    <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                        class="project-deployed-link" title="Presentation"><i class="fa-solid fa-circle-play"
-                            style="color: black;"></i></a>
+
+                <div class="tech">
+                    <div>
+                        <h1>TECH STACK</h1>
+                        <div>
+                            <img src="Skills_Logo/java.png" alt="" title="java">
+                            <img src="Skills_Logo/hibernation.png" alt="" title="Hibernate">
+                            <img src="Skills_Logo/mySql.png" alt="" title="MySql">
+                        </div>
+                    </div>
+
+                    <div class="deployed-links">
+                        <h1>DEPLOYED</h1>
+                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
+                                alt=""></a>
+                        <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
+                            class="project-deployed-link" title="Presentation"><img
+                                src="Skills_Logo/Presentation.png" alt=""></a>
+                    </div>
                 </div>
+
             </div>
         </section>
     </div>
@@ -306,7 +346,7 @@
 
     <div>
         <div id="git-title">
-                <h2 class="left-title">Github Stats</h2>
+            <h2 class="left-title">Github Stats</h2>
         </div>
         <div class="github">
             <div>
@@ -355,7 +395,7 @@
         </div>
     </section>
 
-   
+
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/30a5a51570.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
