--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
     </section>
 
+
     <!-- About Section -->
 
     <div id="about-title">
@@ -75,7 +76,7 @@
     <section id="about" class="about section">
         <div class="container">
             <div class="about-content">
-                <div>
+                <div class="left-div">
                     <p class="about-description">
                         As a Java backend developer, my expertise lies in building full-stack projects utilizing Java,
                         Spring Boot, Hibernate, and restful APIs. With a strong focus on problem-solving, attention to
@@ -83,7 +84,6 @@
                         delivering high-quality software solutions and place great emphasis on effective communication
                         and
                         meeting deadlines.</p>
-
                     <div class="resume-buttons">
                         <a class="resume-button" id="resume-button-2"
                             href="https://drive.google.com/uc?export=download&id=1L1wzxDdw63ikYNVvlOrrOWnI-Hbm_NXD">Know
@@ -92,12 +92,10 @@
                         </a>
                     </div>
                 </div>
-                <div>
+                <div class="right-div">
                     <img src="/images/Aboutimg.jpg" alt="">
                 </div>
             </div>
-
-
         </div>
     </section>
 
@@ -194,8 +192,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="skills-card" style="--i:10;">
                     <div>
                         <img class="skills-card-img" src="Skills_Logo/js_logo2.jpg" alt="">
@@ -230,7 +226,7 @@
                 <h1 class="project-title">TravTok</h1>
                 <h2>A website inspired by the Dribbble template, serving as a traveler's guide for exploring Seoul based
                     on the theme 'Things to do in Seoul.</h2>
-               
+
                 <div class="tech">
                     <div>
                         <h1>Tech Stack</h1>
@@ -242,8 +238,8 @@
 
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/TravTok" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
-                                alt=""></a>
+                        <a href="https://github.com/abhipathak1/TravTok" class="project-github-link" title="Github"><img
+                                src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://travtok.netlify.app/" class="project-deployed-link" title="Netlify"><img
                                 src="Skills_Logo/Netlify.png" alt=""></a>
                     </div>
@@ -266,8 +262,8 @@
                     </div>
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
-                                alt=""></a>
+                        <a href="https://github.com/abhipathak1/HoshiYaar" class="project-github-link"
+                            title="Github"><img src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://hoshiyaar.netlify.app/" class="project-deployed-link" title="Netlify"><img
                                 src="Skills_Logo/Netlify.png" alt=""></a>
                     </div>
@@ -299,11 +295,11 @@
                     </div>
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
-                                alt=""></a>
+                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
+                                src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img
-                                src="Skills_Logo/Presentation.png" alt=""></a>
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/Presentation.png"
+                                alt=""></a>
                     </div>
                 </div>
             </div>
@@ -327,11 +323,11 @@
 
                     <div class="deployed-links">
                         <h1>DEPLOYED</h1>
-                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img src="Skills_Logo/Git_logo.png"
-                                alt=""></a>
+                        <a href="https://github.com/abhipathak1/OnAnOn" class="project-github-link" title="Github"><img
+                                src="Skills_Logo/Git_logo.png" alt=""></a>
                         <a href="https://drive.google.com/file/d/1uevf2dUMyyrpf5PYMhbyqwBvfnb_m0Ek/view?usp=sharing"
-                            class="project-deployed-link" title="Presentation"><img
-                                src="Skills_Logo/Presentation.png" alt=""></a>
+                            class="project-deployed-link" title="Presentation"><img src="Skills_Logo/Presentation.png"
+                                alt=""></a>
                     </div>
                 </div>
 
@@ -379,19 +375,32 @@
     <section id="contact">
         <div class="container">
             <div class="section-heading">
-                <h2 class="">Get in touch</h2>
+                <h2>Get in touch</h2>
+                <p>"Embrace the power of technology, where innovation becomes reality and possibilities are limited only
+                    by imagination."</p>
             </div>
             <ul class="contact-list">
                 <li><a href="mailto:abhipathak3537.com" id="contact-email"><i class="fa-solid fa-envelope"
                             style="color: #050505;"></i> abhipathak3537@gmail.com</a></li>
-                <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github"
+                <!-- <li><a href="https://github.com/abhipathak1" id="contact-github"><i class="fa-brands fa-github"
                             style="color: #000000;"></i> GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/" id="contact-linkedin"><i
                             class="fa-brands fa-linkedin" style="color: #000000;"></i> LinkedIn</a>
-                </li>
+                </li> -->
                 <li><a href="#" id="contact-phone"><i class="fa-solid fa-phone" style="color: #000000;"></i> +91
                         8810594001</a></li>
             </ul>
+            <ul id="foot-socials">
+                <li><a href=""><i class="fa-brands fa-whatsapp" style="color: #ff7300;"></i></a>
+                </li>
+                <li><a href=""><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a>
+                </li>
+                <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github" style="color: #ff7300;"></i></a>
+                </li>
+            </ul>
+            <p>Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
         </div>
     </section>
 
