--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github" style="color: #ff7300;"></i></a>
                 </li>
             </ul>
-            <p>Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
+            <p style="margin-left: 50px;">Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
         </div>
     </section>
 
