--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <ul>
             <li class="logo"><img
                     src="https://cdn.discordapp.com/attachments/758572508911501315/1129308033604923442/ap-letter-logo-design_579179-1040-removebg-preview-removebg-preview.png"
-                    alt=""></li>
+                    alt="">
+            </li>
+            <label class="switch" title="Dark-Mode" title="Dark-Mode">
+                <input type="checkbox" id="dark-mode-toggle">
+            </label>
         </ul>
         <ul>
             <li><a href="#home" class="nav-link home">Home</a></li>
@@ -93,7 +97,7 @@
                     </div>
                 </div>
                 <div class="right-div">
-                    <img src="/images/Aboutimg.jpg" alt="">
+                    <img src="/images/Aboutimg-removebg-preview.png" alt="">
                 </div>
             </div>
         </div>
@@ -213,7 +217,6 @@
             <h2 class="right-title">Projects</h2>
         </div>
     </section>
-
 
     <div>
         <div class="Project">
@@ -338,8 +341,6 @@
 
 
     <!-- gitHub streak stats -->
-
-
     <div>
         <div id="git-title">
             <h2 class="left-title">Github Stats</h2>
@@ -367,7 +368,6 @@
                         alt="GitHub Top Langs" />
                 </a>
             </div>
-
         </div>
     </div>
 
@@ -395,9 +395,11 @@
                 </li>
                 <li><a href=""><i class="fa-brands fa-instagram" style="color: #ff7300;"></i></a>
                 </li>
-                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i class="fa-brands fa-linkedin" style="color: #ff7300;"></i></a>
+                <li><a href="https://www.linkedin.com/in/abhay-pathak-824070257/"><i class="fa-brands fa-linkedin"
+                            style="color: #ff7300;"></i></a>
                 </li>
-                <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github" style="color: #ff7300;"></i></a>
+                <li><a href="https://github.com/abhipathak1"><i class="fa-brands fa-github"
+                            style="color: #ff7300;"></i></a>
                 </li>
             </ul>
             <p style="margin-left: 50px;">Desingned by <span style="color: #ff7300;">Abhay Pathak</span></p>
