--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
             <div class="project-card">
                 <figure class="swing"><img class="proimg" src="images/Hoshiyaarr.png" alt=""></figure>
                 <h1 class="project-title">Hoshiyaar</h1>
-                <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances,
-                    and gadgets.</h2>
+                <h2>Developed Hoshiyaar, an e-commerce website inspired by Bewakoof, catering to clothing, appliances, grocery, and
+                    gadgets
+                </h2>
 
                 <div class="tech">
                     <div>
@@ -370,6 +371,9 @@
             </div>
         </div>
     </div>
+
+
+
 
     <!-- Contact Section -->
     <section id="contact">
