--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Abhay Pathak | Portfolio</title>
     <link rel="shortcut icon"
@@ -96,9 +96,9 @@
                         </a>
                     </div>
                 </div>
-                <!-- <div class="right-div">
+                <div class="right-div">
                     <img src="/images/Aboutimg-removebg-preview.png" alt="">
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
