--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="right-div">
-                    <img src="/images/Aboutimg-removebg-preview.png" alt="">
+                    <img src="https://cdn.discordapp.com/attachments/1128079625818480751/1148311496732975104/output-onlinegiftools_2.gif" alt="">
                 </div>
             </div>
         </div>
